--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ApacheCMDA-Frontend/target/
 ApacheCMDA-Backend/target/
 ApacheCMDA-Backend/project/target/
 ApacheCMDA-Frontend/project/target/
+ApacheCMDA-Backend/.DS_Store
+ApacheCMDA-Frontend/.DS_Store
