--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ApacheCMDA-Backend/project/target/
 ApacheCMDA-Frontend/project/target/
 ApacheCMDA-Backend/.DS_Store
 ApacheCMDA-Frontend/.DS_Store
+.DS_Store
