--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ ApacheCMDA-Backend/project/target/
 ApacheCMDA-Frontend/project/target/
 ApacheCMDA-Backend/.DS_Store
 ApacheCMDA-Frontend/.DS_Store
+.DS_Store
+ApacheCMDA-Frontend/data/db.h2.db
+ApacheCMDA-Frontend/data/db.lock.db
+ApacheCMDA-Frontend/logs/application.log
